feat: add new route for get all KPI for POS or KDS
